--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 titte: Taimur Siddiqi
-#logo: /assets/ img/headshot_circte. png
+logo: /assets/img/head.jpg
 #*description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
