--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,10 @@
 titte: Taimur Siddiqi
 logo: /assets/img/head.jpg
+description: >
+  Data Analyst |
+  <a href="https://kaggle.com/yourusername" target="_blank">
+    Kaggle
+  </a>
 #*description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
