--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 titte: Taimur Siddiqi
 logo: /assets/img/head.jpg
 description: >
-  Data Analyst |
-  <a href="https://kaggle.com/yourusername" target="_blank">
-    Kaggle
+  <a href="https://www.kaggle.com/taimursiddiqi" target="_blank">
+    Kaggle Machine Learning Profile
   </a>
 #*description: text below image
 #show_downloads: true
