--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ titte: Taimur Siddiqi
 logo: /assets/img/head.jpg
 description: >
   <a href="https://www.kaggle.com/taimursiddiqi" target="_blank">
-    Kaggle Machine Learning Profile
+    
+    View My Kaggle Profile
   </a>
 #*description: text below image
 #show_downloads: true
